--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
         /* HERO SECTION */
         .hero {
-            background: linear-gradient(rgba(26, 37, 48, 0.85), rgba(26, 37, 48, 0.8)), url('https://images.unsplash.com/photo-1560518883-ce09059eeffa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            /* Imagem de uma família feliz com um carro, ligando para a seguradora */
+            background: linear-gradient(rgba(26, 37, 48, 0.85), rgba(26, 37, 48, 0.8)), url('https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             padding: 150px 0;
