--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         /* HEADER */
         header { background-color: var(--text-light); box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; transition: 0.3s; }
-        .nav-container { display: flex; justify-content: space-between; align-items: center; height: 90px; } /* Aumentei um pouco a altura para o logo caber bem */
+        .nav-container { display: flex; justify-content: space-between; align-items: center; height: 90px; }
         
         /* LOGO SVG ESTILIZADA */
         .logo svg { transition: transform 0.3s ease; }
@@ -53,31 +53,28 @@
         .nav-links a:hover { color: var(--secondary-color); }
         .mobile-menu-btn { display: none; font-size: 1.5rem; color: var(--primary-color); cursor: pointer; }
 
-        /* --- HERO SECTION (OPÇÃO B - MODERNA) --- */
+        /* --- HERO SECTION (COM SUA IMAGEM famili.png) --- */
         .hero {
-            /* Degradê lateral para destacar o texto à esquerda */
-            background: linear-gradient(to right, rgba(26, 37, 48, 0.95) 0%, rgba(26, 37, 48, 0.6) 100%), url('https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            /* Aqui está configurado para buscar o arquivo famili.png na mesma pasta */
+            background: linear-gradient(to right, rgba(26, 37, 48, 0.95) 0%, rgba(26, 37, 48, 0.6) 100%), url('famili.png');
             background-size: cover;
             background-position: center;
-            /* Altura ajustada */
             padding: 180px 0 160px;
-            /* Alinhamento à esquerda */
             text-align: left; 
             color: var(--text-light);
             display: flex;
             align-items: center;
         }
         .hero-content {
-            max-width: 650px; /* Limita a largura para leitura confortável */
+            max-width: 650px;
         }
         .hero-content h1 { 
             font-size: 3.8rem; 
             margin-bottom: 25px; 
             color: var(--text-light); 
             line-height: 1.1;
-            font-weight: 800; /* Fonte mais grossa */
+            font-weight: 800;
         }
-        /* Destaque da palavra chave */
         .hero-content h1 span {
             color: var(--secondary-color);
         }
@@ -90,7 +87,7 @@
         .hero-buttons { 
             display: flex; 
             gap: 20px; 
-            justify-content: flex-start; /* Botões à esquerda */
+            justify-content: flex-start;
             flex-wrap: wrap; 
         }
 
@@ -145,7 +142,6 @@
         @media (max-width: 768px) {
             .nav-links { display: none; }
             .mobile-menu-btn { display: block; }
-            /* Ajuste Hero Mobile */
             .hero { text-align: center; padding: 120px 0; justify-content: center; }
             .hero-content h1 { font-size: 2.5rem; }
             .hero-buttons { justify-content: center; }
@@ -196,24 +192,12 @@
 
     <div class="trust-bar">
         <div class="container trust-grid">
-            <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://portoseguro.com.br&size=128" alt="Porto Seguro">
-            </div>
-            <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://allianz.com.br&size=128" alt="Allianz">
-            </div>
-            <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://bradescoseguros.com.br&size=128" alt="Bradesco">
-            </div>
-            <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://mapfre.com.br&size=128" alt="Mapfre">
-            </div>
-            <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://azulseguros.com.br&size=128" alt="Azul Seguros">
-            </div>
-             <div class="trust-item">
-                <img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://sulamerica.com.br&size=128" alt="SulAmérica">
-            </div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://portoseguro.com.br&size=128" alt="Porto Seguro"></div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://allianz.com.br&size=128" alt="Allianz"></div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://bradescoseguros.com.br&size=128" alt="Bradesco"></div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://mapfre.com.br&size=128" alt="Mapfre"></div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://azulseguros.com.br&size=128" alt="Azul Seguros"></div>
+            <div class="trust-item"><img src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=http://sulamerica.com.br&size=128" alt="SulAmérica"></div>
         </div>
     </div>
 
@@ -329,11 +313,9 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            
-            // 1. MENU MOBILE
+            // MENU MOBILE
             const menuBtn = document.querySelector('.mobile-menu-btn');
             const navLinks = document.querySelector('.nav-links');
-
             if (menuBtn && navLinks) {
                 menuBtn.addEventListener('click', () => {
                     if (navLinks.style.display === 'flex') {
@@ -342,7 +324,7 @@
                         navLinks.style.display = 'flex';
                         navLinks.style.flexDirection = 'column';
                         navLinks.style.position = 'absolute';
-                        navLinks.style.top = '90px'; /* Ajustado para nova altura do header */
+                        navLinks.style.top = '90px';
                         navLinks.style.right = '0';
                         navLinks.style.backgroundColor = '#fff';
                         navLinks.style.width = '100%';
@@ -352,8 +334,7 @@
                     }
                 });
             }
-
-            // 2. MÁSCARA DE TELEFONE
+            // MÁSCARA DE TELEFONE
             const phoneInputs = document.querySelectorAll('input[type="tel"]');
             phoneInputs.forEach(input => {
                 input.addEventListener('input', (e) => {
@@ -364,12 +345,11 @@
                     e.target.value = value;
                 });
             });
-
-            // 3. SCROLL SUAVE
+            // SCROLL SUAVE
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
                     e.preventDefault();
-                    if(window.innerWidth <= 768 && navLinks) navLinks.style.display = 'none'; // Fecha menu mobile ao clicar
+                    if(window.innerWidth <= 768 && navLinks) navLinks.style.display = 'none';
                     const target = document.querySelector(this.getAttribute('href'));
                     if(target) target.scrollIntoView({ behavior: 'smooth' });
                 });
