--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         .nav-links a:hover { color: var(--secondary-color); }
         .mobile-menu-btn { display: none; font-size: 1.5rem; color: var(--primary-color); cursor: pointer; }
 
-        /* --- HERO SECTION (AJUSTADA: Mais transparente e letras menores) --- */
+        /* --- HERO SECTION (AGORA COM TRANSPARÊNCIA 0.4) --- */
         .hero {
-            /* AJUSTE 1: Transparência alterada de 0.95/0.6 para 0.85/0.5 */
-            background: linear-gradient(to right, rgba(26, 37, 48, 0.85) 0%, rgba(26, 37, 48, 0.5) 100%), url('famili.png');
+            /* AJUSTE FINAL: Opacidade 0.4 na esquerda e 0.4 na direita (Bem leve) */
+            background: linear-gradient(to right, rgba(26, 37, 48, 0.4) 0%, rgba(26, 37, 48, 0.4) 100%), url('famili.png');
             background-size: cover;
             background-position: center;
             padding: 180px 0 160px;
@@ -67,9 +67,10 @@
         }
         .hero-content {
             max-width: 650px;
+            /* Adicionei uma sombra leve no texto para garantir leitura já que o fundo clareou */
+            text-shadow: 0 2px 5px rgba(0,0,0,0.5);
         }
         .hero-content h1 { 
-            /* AJUSTE 2: Tamanho da fonte reduzido de 3.8rem para 3rem */
             font-size: 3rem; 
             margin-bottom: 25px; 
             color: var(--text-light); 
@@ -81,7 +82,7 @@
         }
         .hero-content p { 
             margin-bottom: 35px; 
-            opacity: 0.95; /* Aumentei um pouco a opacidade do parágrafo para leitura */
+            opacity: 1; /* Opacidade máxima para leitura */
             font-size: 1.2rem; 
             max-width: 90%;
         }
@@ -144,7 +145,7 @@
             .nav-links { display: none; }
             .mobile-menu-btn { display: block; }
             .hero { text-align: center; padding: 120px 0; justify-content: center; }
-            .hero-content h1 { font-size: 2.2rem; } /* Ajustado para mobile também */
+            .hero-content h1 { font-size: 2.2rem; }
             .hero-buttons { justify-content: center; }
             .trust-item img { height: 48px; }
         }
