--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="CG Corretora de Seguros: Cotação online de seguro auto, vida, residencial e empresarial. As melhores taxas do mercado.">
     <title>CG Corretora de Seguros | Proteção e Confiança</title>
     
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M50 0L95 25V75L50 100L5 75V25L50 0Z%22 fill=%22%231a2530%22/><path d=%22M50 12L85 32V68L50 88L15 68V32L50 12Z%22 fill=%22%23ff6b35%22/><text x=%2250%22 y=%2262%22 font-family=%22sans-serif%22 font-weight=%22800%22 font-size=%2238%22 text-anchor=%22middle%22 fill=%22white%22>CG</text></svg>">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -53,9 +55,9 @@
         .nav-links a:hover { color: var(--secondary-color); }
         .mobile-menu-btn { display: none; font-size: 1.5rem; color: var(--primary-color); cursor: pointer; }
 
-        /* --- HERO SECTION (AGORA COM TRANSPARÊNCIA 0.4) --- */
+        /* --- HERO SECTION (COM TRANSPARÊNCIA 0.4 E SUA IMAGEM) --- */
         .hero {
-            /* AJUSTE FINAL: Opacidade 0.4 na esquerda e 0.4 na direita (Bem leve) */
+            /* Opacidade 0.4 na esquerda e 0.4 na direita sobre a imagem famili.png */
             background: linear-gradient(to right, rgba(26, 37, 48, 0.4) 0%, rgba(26, 37, 48, 0.4) 100%), url('famili.png');
             background-size: cover;
             background-position: center;
@@ -67,7 +69,7 @@
         }
         .hero-content {
             max-width: 650px;
-            /* Adicionei uma sombra leve no texto para garantir leitura já que o fundo clareou */
+            /* Sombra leve no texto para garantir leitura */
             text-shadow: 0 2px 5px rgba(0,0,0,0.5);
         }
         .hero-content h1 { 
@@ -82,7 +84,7 @@
         }
         .hero-content p { 
             margin-bottom: 35px; 
-            opacity: 1; /* Opacidade máxima para leitura */
+            opacity: 1; 
             font-size: 1.2rem; 
             max-width: 90%;
         }
