--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 
     <section class="hero" id="home">
         <div class="container hero-content">
-            <h1>Segurança <span>Inteligente</span> para<br>Você e Seu Patrimônio</h1>
+            <h1>O imprevisto não avisa quando chega. <span>Nós</span>avisamos que você está protegid<br></h1>
             <p>Especialistas em encontrar o melhor custo-benefício para sua proteção com atendimento humanizado.</p>
             <div class="hero-buttons">
                 <a href="#cotacao" class="btn btn-primary">Fazer Cotação Online</a>
-                <a href="https://wa.me/5583SEUNUMERO?text=Olá, gostaria de uma cotação" class="btn btn-outline" target="_blank">
+                <a href="https://wa.me/5583986226441?text=Olá, gostaria de uma cotação" class="btn btn-outline" target="_blank">
                     <i class="fab fa-whatsapp"></i> Falar no WhatsApp
                 </a>
-            </div>
+            </div>O
         </div>
     </section>
 
@@ -362,3 +362,4 @@
     </script>
 </body>
 </html>
+
