--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Open Sans', sans-serif; line-height: 1.6; color: var(--text-dark); background-color: var(--accent-color); }
+        html { scroll-behavior: smooth; }
+        body { font-family: 'Open Sans', sans-serif; line-height: 1.6; color: var(--text-dark); background-color: var(--accent-color); overflow-x: hidden; }
         h1, h2, h3, h4 { font-family: 'Montserrat', sans-serif; font-weight: 700; color: var(--primary-color); }
         a { text-decoration: none; color: inherit; }
         ul { list-style: none; }
@@ -46,7 +47,6 @@
         header { background-color: var(--text-light); box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; transition: 0.3s; }
         .nav-container { display: flex; justify-content: space-between; align-items: center; height: 90px; }
         
-        /* LOGO SVG ESTILIZADA */
         .logo svg { transition: transform 0.3s ease; }
         .logo:hover svg { transform: scale(1.05); }
 
@@ -55,38 +55,51 @@
         .nav-links a:hover { color: var(--secondary-color); }
         .mobile-menu-btn { display: none; font-size: 1.5rem; color: var(--primary-color); cursor: pointer; }
 
-        /* --- HERO SECTION (COM TRANSPARÊNCIA 0.4 E SUA IMAGEM) --- */
+        /* --- HERO SECTION (DINÂMICA E LIMPA) --- */
         .hero {
-            /* Opacidade 0.4 na esquerda e 0.4 na direita sobre a imagem famili.png */
-            background: linear-gradient(to right, rgba(26, 37, 48, 0.4) 0%, rgba(26, 37, 48, 0.4) 100%), url('famili.png');
+            /* Degradê focado na esquerda para melhorar leitura do texto */
+            background: linear-gradient(to right, rgba(26, 37, 48, 0.8) 0%, rgba(26, 37, 48, 0.2) 60%, rgba(26, 37, 48, 0.1) 100%), url('famili.png');
             background-size: cover;
-            background-position: center;
+            /* Alinha a imagem à direita para manter o homem visível */
+            background-position: right center; 
             padding: 180px 0 160px;
             text-align: left; 
             color: var(--text-light);
             display: flex;
             align-items: center;
+            overflow: hidden; /* Para a animação não criar barra de rolagem */
         }
+
+        /* Animação de entrada do texto */
+        @keyframes slideUpFade {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
         .hero-content {
-            max-width: 650px;
-            /* Sombra leve no texto para garantir leitura */
-            text-shadow: 0 2px 5px rgba(0,0,0,0.5);
+            /* Limita a largura a 45% da tela para não cobrir o homem na direita */
+            width: 45%;
+            min-width: 400px; /* Garante que não fique muito pequeno em tablets */
+            /* Aplica a animação */
+            animation: slideUpFade 1s ease-out forwards;
         }
         .hero-content h1 { 
-            font-size: 3rem; 
+            font-size: 3.2rem; 
             margin-bottom: 25px; 
             color: var(--text-light); 
-            line-height: 1.2;
+            line-height: 1.1;
             font-weight: 800;
+            text-shadow: 0 2px 10px rgba(0,0,0,0.3);
         }
         .hero-content h1 span {
-            color: var(--secondary-color);
+            color: var(--secondary-color); /* Laranja para destaque */
         }
         .hero-content p { 
             margin-bottom: 35px; 
-            opacity: 1; 
-            font-size: 1.2rem; 
+            opacity: 0.95; 
+            font-size: 1.3rem; 
             max-width: 90%;
+            font-weight: 400;
         }
         .hero-buttons { 
             display: flex; 
@@ -95,28 +108,11 @@
             flex-wrap: wrap; 
         }
 
-        /* --- TRUST BAR (LOGOS AUTOMÁTICAS) --- */
+        /* --- TRUST BAR --- */
         .trust-bar { background-color: #fff; padding: 40px 0; border-bottom: 1px solid #eee; }
-        .trust-grid { 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            flex-wrap: wrap; 
-            gap: 40px; 
-        }
-        .trust-item img {
-            height: 64px;
-            width: auto;
-            filter: grayscale(100%);
-            opacity: 0.6;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-        .trust-item img:hover {
-            filter: grayscale(0%);
-            opacity: 1;
-            transform: scale(1.1);
-        }
+        .trust-grid { display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 40px; }
+        .trust-item img { height: 64px; width: auto; filter: grayscale(100%); opacity: 0.6; transition: all 0.3s ease; cursor: pointer; }
+        .trust-item img:hover { filter: grayscale(0%); opacity: 1; transform: scale(1.1); }
 
         /* SERVIÇOS */
         .services { padding: 80px 0; }
@@ -146,8 +142,10 @@
         @media (max-width: 768px) {
             .nav-links { display: none; }
             .mobile-menu-btn { display: block; }
-            .hero { text-align: center; padding: 120px 0; justify-content: center; }
-            .hero-content h1 { font-size: 2.2rem; }
+            /* No mobile, centralizamos tudo e removemos o limite de largura */
+            .hero { text-align: center; padding: 120px 0; justify-content: center; background-position: center; }
+            .hero-content { width: 100%; min-width: auto; }
+            .hero-content h1 { font-size: 2.4rem; }
             .hero-buttons { justify-content: center; }
             .trust-item img { height: 48px; }
         }
@@ -183,14 +181,14 @@
 
     <section class="hero" id="home">
         <div class="container hero-content">
-            <h1>O imprevisto não avisa quando chega. <span>Nós</span>avisamos que você está protegid<br></h1>
-            <p>Especialistas em encontrar o melhor custo-benefício para sua proteção com atendimento humanizado.</p>
+            <h1>O imprevisto não avisa quando chega.<br>Nós avisamos que você está <span>protegido</span>.</h1>
+            <p>Especialistas em encontrar o melhor custo-benefício para sua tranquilidade com atendimento humanizado.</p>
             <div class="hero-buttons">
                 <a href="#cotacao" class="btn btn-primary">Fazer Cotação Online</a>
-                <a href="https://wa.me/5583986226441?text=Olá, gostaria de uma cotação" class="btn btn-outline" target="_blank">
+                <a href="https://wa.me/5583SEUNUMERO?text=Olá, gostaria de uma cotação" class="btn btn-outline" target="_blank">
                     <i class="fab fa-whatsapp"></i> Falar no WhatsApp
                 </a>
-            </div>O
+            </div>
         </div>
     </section>
 
@@ -362,4 +360,3 @@
     </script>
 </body>
 </html>
-
