--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         .nav-links a:hover { color: var(--secondary-color); }
         .mobile-menu-btn { display: none; font-size: 1.5rem; color: var(--primary-color); cursor: pointer; }
 
-        /* --- HERO SECTION (Animação Lenta 5s) --- */
+        /* --- HERO SECTION (Animação Ultra Lenta 8s) --- */
         .hero {
-            background: linear-gradient(to right, rgba(26, 37, 48, 0.8) 0%, rgba(26, 37, 48, 0.2) 60%, rgba(26, 37, 48, 0.1) 100%), url('famili.png');
+            background: linear-gradient(to right, rgba(26, 37, 48, 0.4) 0%, rgba(26, 37, 48, 0.4) 100%), url('famili.png');
             background-size: cover;
             background-position: right center; 
             padding: 180px 0 160px;
@@ -77,8 +77,8 @@
         .hero-content {
             width: 45%;
             min-width: 400px;
-            /* AQUI: Mudei para 5s (efeito câmera lenta/cinematográfico) */
-            animation: slideUpFade 5s ease-out forwards;
+            /* AQUI: Mudei para 8s (super suave) */
+            animation: slideUpFade 8s ease-out forwards;
         }
         .hero-content h1 { 
             font-size: 3.2rem; 
