--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             overflow: hidden; 
         }
 
+        /* Animação */
         @keyframes slideUpFade {
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
@@ -76,6 +77,7 @@
         .hero-content {
             width: 45%;
             min-width: 400px;
+            /* Animação de 8 segundos */
             animation: slideUpFade 8s ease-out forwards;
         }
         .hero-content h1 { 
@@ -121,7 +123,19 @@
         /* SERVIÇOS */
         .services { padding: 80px 0; }
         .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; }
-        .service-card { background: #fff; padding: 40px 30px; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); text-align: center; border-bottom: 3px solid transparent; transition: var(--transition); display: block; color: inherit; text-decoration: none; }
+        /* Estilo para transformar os cards em links */
+        .service-card { 
+            background: #fff; 
+            padding: 40px 30px; 
+            border-radius: 10px; 
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05); 
+            text-align: center; 
+            border-bottom: 3px solid transparent; 
+            transition: var(--transition); 
+            text-decoration: none; /* Remove sublinhado */
+            color: inherit; /* Mantém a cor do texto */
+            display: block; /* Ocupa o espaço todo */
+        }
         .service-card:hover { transform: translateY(-10px); border-bottom: 3px solid var(--secondary-color); }
         .service-icon { font-size: 2.5rem; color: var(--secondary-color); margin-bottom: 20px; }
         
@@ -222,24 +236,27 @@
                 <a href="seguro-auto.html" class="service-card">
                     <div class="service-icon"><i class="fas fa-car"></i></div>
                     <h3>Seguro Auto</h3>
-                    <p>Proteção contra roubo, colisão e assistência 24h. <strong>(Ver detalhes)</strong></p>
+                    <p>Proteção contra roubo, colisão e assistência 24h. <br><strong style="color: var(--secondary-color); font-size: 0.9rem;">(Clique para detalhes)</strong></p>
                 </a>
 
-                <div class="service-card">
+                <a href="seguro-vida.html" class="service-card">
                     <div class="service-icon"><i class="fas fa-heart"></i></div>
                     <h3>Seguro de Vida</h3>
-                    <p>Tranquilidade financeira para sua família em momentos difíceis.</p>
-                </div>
-                <div class="service-card">
+                    <p>Tranquilidade financeira para sua família. <br><strong style="color: var(--secondary-color); font-size: 0.9rem;">(Clique para detalhes)</strong></p>
+                </a>
+
+                <a href="seguro-residencial.html" class="service-card">
                     <div class="service-icon"><i class="fas fa-home"></i></div>
                     <h3>Residencial</h3>
-                    <p>Proteja seu lar contra incêndio, roubo e danos elétricos.</p>
-                </div>
-                <div class="service-card">
+                    <p>Proteja seu lar e ganhe assistências 24h. <br><strong style="color: var(--secondary-color); font-size: 0.9rem;">(Clique para detalhes)</strong></p>
+                </a>
+
+                <a href="seguro-empresarial.html" class="service-card">
                     <div class="service-icon"><i class="fas fa-briefcase"></i></div>
                     <h3>Empresarial</h3>
-                    <p>Segurança para o patrimônio e responsabilidade civil da sua empresa.</p>
-                </div>
+                    <p>Segurança para o património da sua empresa. <br><strong style="color: var(--secondary-color); font-size: 0.9rem;">(Clique para detalhes)</strong></p>
+                </a>
+
             </div>
         </div>
     </section>
